# arrow

cpp/: CMakeLists.txt
cpp/cmake_modules/: SetupCxxFlags.cmake  ThirdpartyToolchain.cmake
cpp/src/arrow/util/: bit_stream_utils.h  rle_encoding.h
cpp/src/chidata/: CMakeLists.txt  bitmap.cc  bitmap.cpp  bitmap.h  bitmap_test.cc  heap.h  heap_test.cc  lang.h  stream.h  stream_test.cc  validate.h
cpp/src/chidata/lqf/: agg.cc  agg.h  agg_test.cc  data_model.cc  data_model.h  data_model_test.cc  filter.cc  filter.h  filter_test.cc  join.cc  join.h  join_test.cc  print.cc  print.h  print_test.cc  sort.cc  sort.h  sort_test.cc
cpp/src/chidata/lqf/operator/: agg.cc  agg.h  agg_test.cc  filter.cc  filter.h
cpp/src/chidata/sboost/: CMakeLists.txt  bitmap_writer.cc  unpacker.cc  unpacker.h  unpacker_test.cc
cpp/src/chidata/sboost/encoding/: deltabp.cc  deltabp_test.cc  encoding_utils.h  rlehybrid.cc  rlehybrid.h  rlehybrid_test.cc  vlbp.cc  vlbp.h
cpp/src/chidata/tool/: scan_column.cc
cpp/src/lqf/: CMakeLists.txt  agg.cc  agg.h  agg_test.cc  aggv_benchmark.cc  bitmap.cc  bitmap.h  bitmap_benchmark.cc  bitmap_test.cc  concurrent.cc  concurrent.h  concurrent_benchmark.cc  concurrent_test.cc  container.cc  container.h  container_benchmark.cc  container_test.cc  data_container.cc  data_container.h  data_container_test.cc  data_model.cc  data_model.h  data_model_enc.cc  data_model_enc.h  data_model_enc_test.cc  data_model_test.cc  dict.cc  dict.h  encoding.cc  encoding.h  encoding_test.cc  env.h  executor.cc  executor.h  executor_test.cc  filter.cc  filter.h  filter_executor.cc  filter_executor.h  filter_test.cc  (+49 more)
cpp/src/lqf/encsel/: CMakeLists.txt
cpp/src/lqf/ssb/: CMakeLists.txt  query1.h  query1_1.cc  query1_2.cc  query1_3.cc  query2.h  query2_1.cc  query2_2.cc  query2_3.cc  query3.h  query3_1.cc  query3_2.cc  query3_3.cc  query3_4.cc  query4.h  query4_1.cc  query4_2.cc  query4_3.cc  ssbquery.cc  ssbquery.h  ssbquery_dev.cc
cpp/src/lqf/tpch/: CMakeLists.txt  agg_dict_benchmark.cc  agg_stripe_benchmark.cc  file_explore.cc  filterjoin_benchmark.cc  hashjoin_benchmark.cc  q1_benchmark.cc  q2_benchmark.cc  query1.cc  query10.cc  query11.cc  query12.cc  query13.cc  query14.cc  query15.cc  query16.cc  query17.cc  query18.cc  query19.cc  query2.cc  query20.cc  query21.cc  query22.cc  query3.cc  query4.cc  query5.cc  query6.cc  query7.cc  query8.cc  query9.cc  tpch_q3.cc  tpch_query.h  tpchquery.cc  tpchquery.h  tpchquery_dev.cc
cpp/src/parquet/: CMakeLists.txt  column_reader.cc  column_reader.h  column_reader_test.cc  encoding.cc  encoding.h  encoding_deltabp_test.cc
cpp/src/sboost/: CMakeLists.txt  bitmap_writer.cc  bitmap_writer_test.cc  sboost.cc  sboost.h  sboost_test.cc  simd.cc  simd.h  unpacker.cc  unpacker.h
cpp/src/sboost/encoding/: deltabp_test.cc  rlehybrid_test.cc
cpp/ssb_sql/presto/create/: customer.sql  date.sql  lineorder.sql  part.sql  supplier.sql
cpp/ssb_sql/presto/query/: q1_1.sql  q1_2.sql  q1_3.sql  q2_1.sql  q2_2.sql  q2_3.sql  q3_1.sql  q3_2.sql  q3_3.sql  q3_4.sql  q4_1.sql  q4_2.sql  q4_3.sql
cpp/ssb_sql/vertica/create/: customer.sql  date.sql  lineorder.sql  part.sql  supplier.sql
cpp/ssb_sql/vertica/query/: q1_1.sql  q1_2.sql  q1_3.sql  q2_1.sql  q2_2.sql  q2_3.sql  q3_1.sql  q3_2.sql  q3_3.sql  q3_4.sql  q4_1.sql  q4_2.sql  q4_3.sql
cpp/ssb_verify/: q1_1.py
cpp/tools/morphstore/: query_memf.py
cpp/tpch_sql/presto/create/: lineitem.sql
cpp/tpch_sql/presto/query/: q10.sql  q11.sql  q12.sql  q2.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  tpch_q13  tpch_q14  tpch_q15  tpch_q16  tpch_q17  tpch_q18  tpch_q19  tpch_q20  tpch_q21  tpch_q22
cpp/tpch_sql/vertica/create/: part.sql
